--- a/config/settings.yml
+++ b/config/settings.yml
@@ -14,5 +14,5 @@ Staging:
   <<: *defaults
 
 Production:
-  approot: "http://www.example.com"
+  approot: "http://qdb.codehash.net"
   <<: *defaults
