--- a/FlyingCircus.cabal
+++ b/FlyingCircus.cabal
@@ -108,8 +108,13 @@ test-suite test
     ghc-options:       -Wall
 
     build-depends: base
-                 , yesod-scaffold
-                 , yesod-test
+                 , FlyingCircus
+                 , yesod-test >= 1.2 && < 1.3
                  , yesod-core
+                 , yesod
                  , persistent
-                 , persistent-sqlite
+                 , persistent-postgresql
+                 , resourcet
+                 , monad-logger
+                 , transformers
+                 , hspec
