Override build script to not try to run tests.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: haskell
 before_install:
   - npm install coffee-script -g
+script:
+  - cabal configure && cabal build
 deploy:
   provider: heroku
   api_key:
