Update Travis config to use git deploy strategy.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,4 @@ deploy:
   on:
     repo: mithrandi/lambdacircus
   skip_cleanup: true
-  buildpack: https://github.com/begriffs/heroku-buildpack-ghc.git
-  strategy: anvil
+  strategy: git
