--- a/LambdaCircus.cabal
+++ b/LambdaCircus.cabal
@@ -1,16 +1,16 @@
-name:              FlyingCircus
+name:              LambdaCircus
 version:           0.0.0
 license:           MIT
 license-file:      LICENSE
 author:            Tristan Seligmann
 maintainer:        Tristan Seligmann
-synopsis:          The greatest Yesod web application ever.
-description:       I'm sure you can say something clever here if you try.
+synopsis:          IRC quotes database
+description:       It's not that hard.
 category:          Web
 stability:         Experimental
 cabal-version:     >= 1.8
 build-type:        Simple
-homepage:          http://FlyingCircus.yesodweb.com/
+homepage:          https://github.com/mithrandi/lambdacircus/
 
 Flag dev
     Description:   Turn on development settings, like auto-reload templates.
@@ -53,52 +53,52 @@ library
                 FlexibleInstances
                 EmptyDataDecls
                 NoMonomorphismRestriction
+                ViewPatterns
 
     build-depends: base                          >= 4          && < 5
-                 , yesod                         >= 1.2        && < 1.3
-                 , yesod-core
-                 , yesod-auth
-                 , yesod-static
-                 , yesod-form
-                 , clientsession
-                 , bytestring
-                 , text
-                 , persistent
-                 , persistent-postgresql
-                 , persistent-sqlite
+                 , yesod                         >= 1.4.0      && < 1.5
+                 , yesod-core                    >= 1.4.0      && < 1.5
+                 , yesod-auth                    >= 1.4.0      && < 1.5
+                 , yesod-static                  >= 1.4.0      && < 1.5
+                 , yesod-form                    >= 1.4.0      && < 1.5
+                 , bytestring                    >= 0.9        && < 0.11
+                 , text                          >= 0.11       && < 2.0
+                 , persistent                    >= 2.0        && < 2.2
+                 , persistent-postgresql         >= 2.0        && < 2.2
+                 , persistent-template           >= 2.0        && < 2.2
                  , template-haskell
-                 , hamlet
-                 , shakespeare
-                 , shakespeare-css
-                 , shakespeare-js
-                 , shakespeare-text
-                 , hjsmin
-                 , monad-control
-                 , wai-extra
-                 , wai-logger
-                 , fast-logger
-                 , monad-logger
-                 , yaml
-                 , http-conduit
-                 , directory
-                 , warp
+                 , shakespeare                   >= 2.0        && < 2.1
+                 , hjsmin                        >= 0.1        && < 0.2
+                 , monad-control                 >= 0.3        && < 0.4
+                 , wai-extra                     >= 3.0        && < 3.1
+                 , yaml                          >= 0.8        && < 0.9
+                 , http-conduit                  >= 2.1        && < 2.2
+                 , directory                     >= 1.1        && < 1.3
+                 , warp                          >= 3.0        && < 3.1
                  , data-default
-                 , aeson
+                 , aeson                         >= 0.6        && < 0.9
+                 , conduit                       >= 1.0        && < 2.0
+                 , monad-logger                  >= 0.3        && < 0.4
+                 , fast-logger                   >= 2.2        && < 2.3
+                 , wai-logger                    >= 2.2        && < 2.3
                  , time
-                 , old-locale
                  , http-types
                  , directory
                  , unordered-containers
                  , heroku
+                 , old-locale
+    -- see https://github.com/yesodweb/yesod/issues/814
+    if !os(windows)
+        build-depends: unix
 
-executable         FlyingCircus
+executable         LambdaCircus
     if flag(library-only)
         Buildable: False
 
     main-is:           main.hs
     hs-source-dirs:    app
     build-depends:     base
-                     , FlyingCircus
+                     , LambdaCircus
                      , yesod
 
     ghc-options:       -threaded -O2
@@ -110,13 +110,12 @@ test-suite test
     ghc-options:       -Wall
 
     build-depends: base
-                 , FlyingCircus
+                 , LambdaCircus
                  , yesod-test >= 1.2 && < 1.3
                  , yesod-core
                  , yesod
                  , persistent
                  , persistent-postgresql
-                 , persistent-sqlite
                  , resourcet
                  , monad-logger
                  , transformers
