--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,16 @@
 language: haskell
 before_install:
   - npm install coffee-script -g
-  - cabal install 'alex >= 3.0.5'
+  - cabal install 'happy >= 1.19.4'
+  - cabal install 'alex >= 3.1.3'
 script:
-  - coffee -cb templates/default-layout.coffee && mv templates/default-layout.js templates/default-layout.julius && git add templates/default-layout.julius && git rm templates/default-layout.coffee
   - cabal configure && cabal build
-before_deploy:
-  - git config user.name 'Travis Builder'
-  - git config user.email 'travis@mithrandi.net'
-  - git commit -m 'Add built CoffeeScript.'
-deploy:
-  provider: heroku
-  api_key:
-    secure: hBbPLNburzk/YY3hbpgdmbMdfk/osgh76fYBui1Yx6CYBTfMRUii22y8rtrCeu2BD6bEVEoSzFEelxg/LsVUjHIBnowXkl26lu3qbt6WpXi6KIyNJx/Y0U1gyoghW5hHqf2OL0u4zdHc7/jueVNmPcIDqq7XHUq84xi6TvAHwJY=
-  app: lambdacircus
-  on:
-    repo: mithrandi/lambdacircus
-  skip_cleanup: true
-  strategy: git
+#deploy:
+#  provider: heroku
+#  api_key:
+#    secure: hBbPLNburzk/YY3hbpgdmbMdfk/osgh76fYBui1Yx6CYBTfMRUii22y8rtrCeu2BD6bEVEoSzFEelxg/LsVUjHIBnowXkl26lu3qbt6WpXi6KIyNJx/Y0U1gyoghW5hHqf2OL0u4zdHc7/jueVNmPcIDqq7XHUq84xi6TvAHwJY=
+#  app: lambdacircus
+#  on:
+#    repo: mithrandi/lambdacircus
+#  skip_cleanup: true
+#  strategy: git
