--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,15 @@
 language: haskell
+sudo: false
+cache:
+  directories:
+    - $HOME/.cabal
+    - $HOME/.ghc
 before_install:
+  - cabal update
   - cabal install 'happy >= 1.19.4'
   - cabal install 'alex >= 3.1.3'
 script:
-  - cabal configure && cabal build
+  - cabal configure && cabal build --upgrade-dependencies
 #deploy:
 #  provider: heroku
 #  api_key:
