--- a/LambdaCircus.cabal
+++ b/LambdaCircus.cabal
@@ -111,7 +111,7 @@ test-suite test
 
     build-depends: base
                  , LambdaCircus
-                 , yesod-test >= 1.2 && < 1.3
+                 , yesod-test >= 1.4
                  , yesod-core
                  , yesod
                  , persistent
