--- a/LambdaCircus.cabal
+++ b/LambdaCircus.cabal
@@ -55,32 +55,34 @@ library
                 NoMonomorphismRestriction
                 ViewPatterns
 
-    build-depends: base                          >= 4          && < 5
-                 , yesod                         >= 1.4.0      && < 1.5
-                 , yesod-core                    >= 1.4.0      && < 1.5
-                 , yesod-auth                    >= 1.4.0      && < 1.5
-                 , yesod-static                  >= 1.4.0      && < 1.5
-                 , yesod-form                    >= 1.4.0      && < 1.5
-                 , bytestring                    >= 0.9        && < 0.11
-                 , text                          >= 0.11       && < 2.0
-                 , persistent                    >= 2.0        && < 2.2
-                 , persistent-postgresql         >= 2.0        && < 2.2
-                 , persistent-template           >= 2.0        && < 2.2
+    build-depends: base
+                 , yesod
+                 , yesod-core
+                 , yesod-auth
+                 , yesod-static
+                 , yesod-form
+                 , bytestring
+                 , text
+                 , persistent
+                 , persistent-postgresql
+                 , persistent-template
                  , template-haskell
-                 , shakespeare                   >= 2.0        && < 2.1
-                 , hjsmin                        >= 0.1        && < 0.2
-                 , monad-control                 >= 0.3        && < 0.4
-                 , wai-extra                     >= 3.0        && < 3.1
-                 , yaml                          >= 0.8        && < 0.9
-                 , http-conduit                  >= 2.1        && < 2.2
-                 , directory                     >= 1.1        && < 1.3
-                 , warp                          >= 3.0        && < 3.1
+                 , shakespeare
+                 , hjsmin
+                 , monad-control
+                 , wai-extra
+                 , yaml
+                 , http-conduit
+                 , directory
+                 , warp
                  , data-default
-                 , aeson                         >= 0.6        && < 0.9
-                 , conduit                       >= 1.0        && < 2.0
-                 , monad-logger                  >= 0.3        && < 0.4
-                 , fast-logger                   >= 2.2        && < 2.3
-                 , wai-logger                    >= 2.2        && < 2.3
+                 , aeson
+                 , lens-aeson
+                 , lens
+                 , conduit
+                 , monad-logger
+                 , fast-logger
+                 , wai-logger
                  , time
                  , http-types
                  , directory
@@ -111,7 +113,7 @@ test-suite test
 
     build-depends: base
                  , LambdaCircus
-                 , yesod-test >= 1.4
+                 , yesod-test
                  , yesod-core
                  , yesod
                  , persistent
