--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ cache:
   directories:
     - $HOME/.cabal
     - $HOME/.ghc
+branches:
+  only:
+    - master
 before_install:
   - cabal install 'happy >= 1.19.4'
   - cabal install 'alex >= 3.1.3'
@@ -16,3 +19,5 @@ before_install:
 #    repo: mithrandi/lambdacircus
 #  skip_cleanup: true
 #  strategy: git
+notifications:
+  email: false
