--- a/client/lambdacircus-client.cabal
+++ b/client/lambdacircus-client.cabal
@@ -22,7 +22,7 @@ executable lambdacircus-client
                      , OverloadedStrings
                      , OverloadedLists
                      , TupleSections
-  ghcjs-options:       -O2
+  ghcjs-options:       -Wall -Werror -O2
   build-depends:       base >=4.7 && <4.8
                      , blaze-react
                      , containers
