Update approot to https.

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -15,5 +15,5 @@ Staging:
   <<: *defaults
 
 Production:
-  approot: "http://qdb.codehash.net"
+  approot: "https://qdb.codehash.net"
   <<: *defaults
