--- a/config/settings.yml
+++ b/config/settings.yml
@@ -5,7 +5,7 @@ Default: &defaults
   #analytics: UA-YOURCODE
 
 Development:
-  approot: "http://localhost:3000"
+  approot: "https://localhost:3443"
   <<: *defaults
 
 Testing:
