--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,19 +1,36 @@
-Default: &defaults
-  host: "*4"
-  port: 3000
-  copyright: Insert copyright statement here
-  #analytics: UA-YOURCODE
+# Values formatted like "_env:ENV_VAR_NAME:default_value" can be overridden by the specified environment variable.
+# See https://github.com/yesodweb/yesod/wiki/Configuration#overriding-configuration-values-with-environment-variables
 
-Development:
-  approot: "https://localhost:3443"
-  <<: *defaults
+static-dir:     "_env:STATIC_DIR:static"
+host:           "_env:HOST:*4" # any IPv4 host
+port:           "_env:PORT:3000" # NB: The port `yesod devel` uses is distinct from this value. Set the `yesod devel` port from the command line.
+ip-from-header: "_env:IP_FROM_HEADER:false"
 
-Testing:
-  <<: *defaults
+# Default behavior: determine the application root from the request headers.
+# Uncomment to set an explicit approot
+#approot:        "_env:APPROOT:http://localhost:3000"
 
-Staging:
-  <<: *defaults
+# Optional values with the following production defaults.
+# In development, they default to the inverse.
+#
+# detailed-logging: false
+# should-log-all: false
+# reload-templates: false
+# mutable-static: false
+# skip-combining: false
+# auth-dummy-login : false
 
-Production:
-  approot: "https://qdb.codehash.net"
-  <<: *defaults
+# NB: If you need a numeric value (e.g. 123) to parse as a String, wrap it in single quotes (e.g. "_env:PGPASS:'123'")
+# See https://github.com/yesodweb/yesod/wiki/Configuration#parsing-numeric-values-as-strings
+
+database:
+  user:     "_env:PGUSER:lambdacircus"
+  password: "_env:PGPASS:lambdacircus"
+  host:     "_env:PGHOST:localhost"
+  port:     "_env:PGPORT:5432"
+  # See config/test-settings.yml for an override during tests
+  database: "_env:PGDATABASE:lambdacircus"
+  poolsize: "_env:PGPOOLSIZE:10"
+
+copyright: © 2014 Tristan Seligmann
+#analytics: UA-YOURCODE
